--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,5 @@
-__pycache__/
-*.py[cod]
-
-*~
-*-
-*.swp
-*.save
-.DS_Store
-
-/env
-/.ipynb_checkpoints
-
-/COVID-19
-/*.png
+*
+!.gitignore
+!README.md
+!requirements.txt
+!*.ipynb
